[gd_scene load_steps=3 format=3 uid="uid://dssoxi6pfg7rs"]

[ext_resource type="FontFile" uid="uid://d0aw4bklyegh8" path="res://Ressources/Font/FSEX300.ttf" id="1_bcw24"]
[ext_resource type="Script" path="res://Source/MenuUI/JoinMenu.gd" id="1_rtyv6"]

[node name="JoinMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -98.0
offset_right = 146.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtyv6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(192, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bcw24")
theme_override_font_sizes/font_size = 32
text = "Pseudo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PseudoLine" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(394, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(192, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bcw24")
theme_override_font_sizes/font_size = 32
text = "Password"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordLine" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(394, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
secret = true

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(192, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bcw24")
theme_override_font_sizes/font_size = 32
text = "IP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IPLine" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(394, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bcw24")
theme_override_font_sizes/font_size = 32
disabled = true
text = "Join"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ToMultiplayerMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bcw24")
theme_override_font_sizes/font_size = 32
text = "Return"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/GridContainer/PseudoLine" to="." method="_on_pseudo_line_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/GridContainer/IPLine" to="." method="_on_ip_line_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ToMultiplayerMenuButton" to="." method="_on_to_multiplayer_menu_button_pressed"]
